# example_latex

./: Dockerfile  demo.md  docker-compose.yml  makefile  pyproject.toml
app/: config.py  inference.py  main.py  routers.py  schemas.py
app/utils/: extraction.py  logger_configure.py  minio.py  rendering.py
